# books-django

./: README.md  pyproject.toml  requirements.md
books/: admin.py  models.py  tests.py
books/migrations/: 0001_initial.py  0002_alter_book_genre.py
interview_project/: settings.py
users/: admin.py  models.py
users/migrations/: 0001_initial.py
