[tool.poetry]
name = "interview-project"
version = "0.1.0"
description = ""
authors = ["Muhannad Alrusayni <malrusayni@deem.sa>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
